Partie de Tibo (#3)
* Update Viewpoints

* Update viewsPart2.tex

* Update 2.part.tex

* Delete content/viewsPart2.tex

* Update 2.part.tex

* Update 2.part.tex

* Update 2.part.tex

* Update 2.part.tex

* Ajout du workflow latex (#1) (#2)

* Create main.yml

* Update main.yml

actions to v4

Co-authored-by: Jean-Yves S <jean-yves.saint-loubert@insa-toulouse.fr>

* Update bibliography.bib

* Update 2.part.tex

* Update __all__.tex

* Update 1.part.tex

* Update 0.introduction.tex

* Update 0.introduction.tex

Remove smallskip

* Update 2.part.tex

Reformat code

remove space and new line

* Update main.tex

* Update bibliography.bib

---------

Co-authored-by: Jean-Yves S <7360784+docjyJ@users.noreply.github.com>
Co-authored-by: Jean-Yves S <jean-yves.saint-loubert@insa-toulouse.fr>

--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -1,29 +1,32 @@
-\section{Part 2}
+\section{Perspectives and Challenges Faced by Autistic Individuals in public Transportation}
+    
+\subsection{Encountered Challenges}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel nunc ultricies, lobortis leo a, mattis sapien. Duis nec sapien a diam sollicitudin consectetur. Etiam magna lorem, vulputate at fermentum sed, hendrerit nec metus. Integer ut nunc elit. Cras tristique finibus porttitor. Aliquam fringilla ipsum eget condimentum vehicula. Sed ac tellus ac erat sagittis ullamcorper quis a leo. Nulla sed elit tincidunt, posuere velit sed, fringilla quam. Praesent facilisis eros nec leo luctus, in mattis quam rhoncus.
+Anxiety and stress are common challenges that autistic individuals face while using transportation on a regular basis \cite{2020ExperiencesYoungAutistic}. Stress stems from the worry that they could commit mistakes when travelling, such as skipping important stops or not knowing if their regular transit plans will change. Their daily tasks become more challenging as a consequence of their elevated emotional state.  Moreover, Autism Spectrum Disorder (ASD) may cause balance and motion sickness, sensitivity to noise in the surrounding environment, to tactile perception, lighting or smells. These appear as an additional barrier when using public transportation and make it frightening.
 
-Phasellus lorem erat, aliquet at dapibus in, egestas at justo. Cras a lectus eget libero faucibus cursus. Nulla et facilisis dui. In orci odio, faucibus a ultricies eu, finibus ut massa. Praesent ac sem volutpat, tempor risus quis, aliquet turpis. In hac habitasse platea dictumst. Vestibulum laoreet, justo id semper eleifend, augue dui molestie ligula, id varius erat mi a quam. Etiam cursus, justo ac lobortis viverra, nibh neque faucibus nibh, ut laoreet nulla ligula quis neque. Nam ornare felis nisi, sit amet vulputate lorem varius at. Vestibulum tincidunt, ex eget finibus pulvinar, magna sapien convallis ante, quis mollis nisl ex ac mi. Etiam vestibulum dui a lorem vulputate, et cursus mauris dictum. Donec porta molestie tincidunt. Proin euismod libero turpis, sed iaculis magna posuere nec. Ut non dolor nisl. Donec a tellus pulvinar, luctus dolor vel, ultrices sem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+Many people with ASD feel forced to rely on parents and caregivers. However, another significant concern comes from this heavy dependency on family for transportation. This dynamic induces inconveniences and stress for both adults with ASD and their immediate support circle \cite{2015DetourRightPlace}. This reliance affects their autonomy but also has a broader impact on the convenience and flexibility of their everyday live. The phase of transition following school completion, usually around age 21, presents an additional set of difficulties. As school transportation and government support end,  people with ASD and their families enter a world of newly discovered transportation complexity. Many individuals with ASD have limited walking skills, which makes it harder for them to get around freely in public places and increases their dependency on others for transportation. The safety concerns associated with driving is alarming, particularly from the perspective of concerned parents, despite an expressed interest on the part of autistic individuals in obtaining a driver's license for the sake of independence. 
 
-\subsection{Subsection 1}
+Furthermore, specific worries about crowding and safety are real roadblocks for people with ASD to use public transportation \cite{2015ViewpointsAdultsAutism}.  
 
-Cras commodo, elit at fermentum tincidunt, velit urna feugiat leo, in varius est magna in lectus. Curabitur sodales, libero et dapibus placerat, dolor arcu egestas lectus, accumsan mattis orci ante et est. Etiam maximus maximus ante vitae elementum. Praesent volutpat mauris eget sapien pretium, a consequat mi mattis. Phasellus ac lobortis odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Vestibulum tincidunt tristique semper.
+\subsection{Current Adaptations}
 
-Nullam faucibus eu risus nec accumsan. In vitae augue rhoncus, iaculis nunc non, dapibus massa. In laoreet quis ante ac porta. Morbi eget lorem scelerisque, accumsan felis sit amet, cursus nisl. Etiam vitae orci tristique, sollicitudin odio in, varius metus. Nullam massa risus, molestie eget dictum mattis, placerat vel risus. Aenean consequat tristique libero ac rutrum. Integer fringilla facilisis felis, non accumsan erat accumsan a. Nunc vitae lorem id ligula dapibus convallis at ut nisl. Mauris consectetur urna quam, nec egestas erat suscipit in.
+To mitigate those difficulties, people with ASD use a variety of adaptive techniques when navigating public transportation. 
 
-\subsection{Subsection 2}
+One of the most widely spread strategies is avoiding public transportation completely and using their support networks, which include family and caregivers\cite{2015DetourRightPlace}. This approach helps reducing stress and anxiety normally associated with travel. However, as explained above, it makes them strongly dependent on others to travel. 
 
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec et maximus dui. Proin bibendum dolor turpis, nec eleifend purus pharetra in. Cras mattis, nisl sit amet varius suscipit, dolor eros imperdiet risus, et blandit arcu tellus eget nunc. Vivamus eu nibh vitae lectus tristique ullamcorper quis in odio. Sed non enim sit amet lacus porta tincidunt. Ut eget facilisis eros, et eleifend nisl. In tincidunt mattis tellus in varius. Sed felis eros, sollicitudin eget purus ultrices, tempor malesuada est. Ut egestas erat et velit tempor viverra. Aenean quis imperdiet nisi. Aliquam varius vestibulum nibh sit amet euismod. Duis massa lectus, efficitur vitae porttitor id, sodales nec quam. Suspendisse aliquet mattis metus, ac dignissim nulla ultricies in. Nulla a commodo orci.
+Another important strategy is to carefully plan their route in advance \cite{2020ExperiencesYoungAutistic}. This helps people with ASD to know where to go and anticipate changes, which gives them a sense of control. Other tactics used to reduce stress when using public transportation include avoiding crowded areas or selecting off-peak hours.
 
-Mauris vitae libero odio. Praesent nec eros sem. Ut aliquet vestibulum lorem ac venenatis. Maecenas feugiat, est at suscipit luctus, velit purus laoreet mauris, eu pharetra eros neque a lacus. Duis cursus quis purus ac accumsan. Praesent ullamcorper porta libero, quis ultrices enim porttitor sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas non euismod purus, ac suscipit nibh. Donec in massa aliquet, vestibulum libero eu, fermentum sapien. Mauris consequat imperdiet eros ut elementum. Nulla euismod, enim id malesuada gravida, purus lectus imperdiet nibh, sit amet ullamcorper metus nunc nec nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eu mauris sit amet diam suscipit venenatis. Vestibulum ut leo ac metus fermentum porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+Rather than using public transport, some individuals find comfort in utilizing bicycles for short-distance travel \cite{2015ViewpointsAdultsAutism} for more autonomy. They usually lean towards self-reliance and express a preference for drawing on personal coping mechanisms rather than seeking external help. Another effective coping mechanism consists in setting up routines\cite{2015ViewpointsAdultsAutism}, which reduces anxiety by introducing familiarity into their travel experiences. 
 
-\subsection{Subsection 3}
+The use of technological tools, such as smartphone applications, plays a crucial role in helping individuals with ASD. It makes it easier to plan paths and to check transportation schedules. It also enhances their autonomy during travel. To manage sensory challenges, music and headphones provide them with controlled auditory environment and relief from noise sensitivity \cite{2020ExperiencesYoungAutistic}. 
 
-Proin gravida eros id faucibus sollicitudin. Vivamus molestie, nisi nec blandit viverra, eros arcu porttitor nibh, a vestibulum est urna ut mi. Donec vel nisl vitae odio ullamcorper tempor eu eu libero. Nullam sem nisi, varius ut nunc vel, luctus cursus dui. Proin cursus euismod sem tincidunt dignissim. Suspendisse volutpat arcu eu scelerisque facilisis. Donec id ultricies sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+\subsection{Expectations and Foreseen Solutions}
 
-Donec at elit vehicula, varius nisl ac, malesuada ante. Mauris ut iaculis enim. Quisque faucibus nibh id dui hendrerit sagittis. Suspendisse non mauris a purus aliquet iaculis. Aliquam erat volutpat. Vestibulum augue sem, pretium quis dapibus sit amet, pretium sed urna. Donec at lectus dui. Ut imperdiet augue eget odio vehicula ullamcorper. Maecenas sed enim quis nunc porttitor eleifend. Aenean et mollis nibh. Integer id posuere odio. Sed et porttitor metus, a semper mi. Mauris egestas odio in posuere mollis. Praesent pellentesque, dolor nec aliquam dictum, ex lectus cursus sapien, vehicula ornare urna ipsum non massa.
+Individuals with ASD are subjected to high levels of anxiety whilst using transportation. In order to reduce the anxiety felt in transit, sensory-friendly measures specially tailored for them would be implemented \cite{2020ExperiencesYoungAutistic}. These measures should include the selection of less noisy paths for transport or the installation of dedicated areas in waiting areas for people with sensory sensitivities. Straightforward communication from transport companies would also reduce stress caused by uncertainty and randomness.
 
-\subsection{Subsection 4}
+People with ASD would feel better if universal design principles were implemented in transport infrastructures \cite{2020ExperiencesYoungAutistic}. It would facilitate access for everyone, disabled and non-disabled people alike, and improve public transportation for all users.
 
-Quisque ut risus neque. Praesent iaculis finibus porttitor. Sed rutrum diam eget gravida imperdiet. Sed at ex velit. Ut ut dictum sem. Pellentesque a tincidunt lorem. Sed tincidunt metus nec auctor semper. Phasellus vestibulum auctor justo a pretium. Nam eu tincidunt dui, at scelerisque ante. Phasellus dapibus lacus at tempus pellentesque.
+To help them gain independence in their daily transits, people with ASD expect new technologies to simplify their everyday life, for example with dedicated applications that consider their personal needs. They would also benefit from training programs to help them navigate public spaces autonomously. Those programs would start during the school curriculum, and smoothen the transition between school and adult life \cite{2015DetourRightPlace}. Moreover, driver education programs should adapt to people with ASD and allow them to pursue their existing interest in driving \cite{2015DetourRightPlace}. 
 
-Vivamus mattis porta mi iaculis sagittis. Aenean sit amet rutrum nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque quis libero imperdiet, consectetur felis sed, venenatis augue. Nulla tempor rutrum viverra. Proin non dictum urna. Mauris mattis finibus neque, quis tincidunt libero vulputate eu. Praesent lobortis fermentum faucibus. Donec eget neque eu enim aliquam mattis. Praesent a eleifend ante. Suspendisse auctor enim sit amet malesuada malesuada. Aenean molestie lacus sed velit ornare malesuada. Nam sagittis pretium interdum. 
+Their requests finally regard the global awareness about ASD by setting up public education campaigns to enhance awareness about the characteristics of ASD. Those awareness campaigns would aim to facilitate social integration for adults with ASD \cite{2015DetourRightPlace}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, to address issues specific to ASD more easily and increase understanding and assistance to people with ASD \cite{2020ExperiencesYoungAutistic}. 
+
