--- a/content/4.part.tex
+++ b/content/4.part.tex
@@ -5,21 +5,25 @@ As we mentioned previously, numerous solutions exist in order to simplify urban 
 Furthermore, most solutions are not ideal because they force autistics to adapt to neurotypical norms, instead of considering their real needs. We should instead turn our focus towards diagnosing autism better and earlier.
 
 \subsection{The existing solutions are limited}
-Despite great efforts to find suitable solutions, most of the existence ones are very far from being sufficient. A lot of autistic people can have trouble driving and most of them prefer to use public transportation \cite{2015ViewpointsAdultsAutism} \cite{2021DevelopingCommunityMobility}, but the public transportation is still lagging behind with regards to certain issues. Indeed, a study has been made in Sydney \cite{2020ExperiencesYoungAutistic} over 14 young adults who have ASD, and shows that most of them feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.
+Despite great efforts to find suitable solutions, most of the existence ones are very far from being sufficient. A lot of autistic people can have trouble driving and most of them prefer to use public transportation \cite{2015ViewpointsAdultsAutism} \cite{2021DevelopingCommunityMobility}, but the public transportation is still lagging behind with regards to certain issues. Indeed, most of the people with ASD feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.\cite{2020ExperiencesYoungAutistic}
 
-Another problem that is highlighted in the article \cite{2015DetourRightPlace} is the lack of accessibility of public transportation. As mentioned in this article, public transportation is crucial for the mobility of people with ASD but it exists numerous inequalities regarding its accessibility. For instance, suburbans and rural areas does not have as many public transportation as the center of a big city.
+Another problem  is the lack of accessibility of public transportation. This alternative is crucial for the mobility of people with ASD but it exists numerous inequalities regarding its accessibility. For instance, suburbans and rural areas does not have as many public transportation as the center of a big city.\cite{2015DetourRightPlace}
 
-Moreover, the existing mobile apps to help people with ASD are not perfect and can be improved. For instance, as we can see in the article \cite{2023AccessibilityStrategiesPromote}, we can see that an app has been developped for the city of Viana do Castelo, in Portugal, in order to provide to people an optimal route regarding their disabilities. This app uses the A-star algorithm to find five optimum paths between two destinations, and users can choose the best path for them depending on their disabilities. However, this app is available only in the city of Viana de Castelo, so people living in other cities cannot benefit of it. Also, it does not have the possibility to choose a path made of multiple destinations, it does not use crowdsourced data and it has no mention of public transports. In short, this app can be really helpful to people with ASD, but its accessibility is limited to only a few people, and it is a shame that it does not include public transportation, knowing that they are crucial for the mobility of people with ASD.  
+Moreover, the existing mobile apps to help guiding people with ASD in their city are not perfect and can be improved. Some of these apps are only available in one specific city, and their functionalities could be improved in order to be really helpful. For example, the application Viana+Acessível that we presented before (part 3.1) is only available in the city of Viana de Castelo, so people living in other cities cannot benefit of it. Also, this app does not have the possibility to choose a path made of multiple destinations, it does not use crowdsourced data and it has no mention of public transports. In short, this app can be really helpful to people with ASD, but its accessibility is limited to only a few people, and it is a shame that it does not include public transportation, knowing that they are crucial for the mobility of people with ASD.\cite{2023AccessibilityStrategiesPromote}  
+
 \subsection{Some of the solutions could not be compatible with the already existing infrastructures}
-As indicated in the article \cite{2018MobilityPoliciesExtraSmall}, some of the solutions to help people with ASD to walk arround the cities consist of reorganising them in order to have a better quality of life. This article gives the example of one district of the city of Sassari, in Italy, which name is Sardinia. In this district, people with ASD cannot freely walk due to noise and regular dangerous situations. 
+Some of the solutions to help people with ASD to walk arround the cities consist of reorganising them in order to have a better quality of life, like in one district of the city of Sassari, in Italy, which name is Sardinia.\cite{2018MobilityPoliciesExtraSmall}
 
-A solution has been developed to help people with ASD to walk arround the district. The first step is to decrease the car’s traffic, to decrease noise and dangerous situations.  For that we can define low-speed blocks to discourage through traffic, add parkings areas at the entrance of the quarter, and to reduce the size of roads in favor of sidewalks. Another step is to mark the dangerous zone, to facilitate their identification. To do that we can mark by a vertical line (on the floor) the regular path taken. In the safe areas, the line is blue, in the dangerous zone the line is red, this mark when you need to be careful. The last solution presented in this paper is to create quiet space, around the main road. For this one, we can add some benches, trees and children's games in some space (like a tiny park). This also permite to the rest of the population, who don’t have TSA, to also take advantage of this evolution.
+Unfortunately, not all the cities in the world will agree to do all these reorganisations. The experimentation in Sardinia was made in a small district, but it would be difficult and expensive to apply this solution to the whole city, let alone a bigger one.
 
-Unfortunately, not all the cities in the world will agree to do all these reorganisations. For example, in a city where most of the people drive by car and the road is already built, it may be not possible to reduce the size of roads in favor of sidewalks, because it would cost too much money and most of people would be against it. Moreover, in some cities, it can also be complicated to build more quiet zones with trees, as they already have too much buildings and roads and there is no more space to build new parks. Building a quiet zone would imply destroying another infrastructure, whose owner would be against. 
+Moreover, in a city where most of the people drive by car and the road is already built, it may be not possible to reduce the size of roads in favor of sidewalks, because it would cost too much money and most of people would be against it. Besides, in some cities, it can also be complicated to build more quiet zones with trees, as they already have too much buildings and roads and there is no more space to build new parks. Building a quiet zone would imply destroying another infrastructure, whose owner would be against. 
+
+These solutions are interesting for future projects but cannot always be applied easily to all infrastructures.
+
 \subsection{Most of the solutions force people with ASD to adapt}
-As it is highlighted in the article \cite{2017UTravelSmartMobility}, a lot of technologies designed to help people with ASD are criticized because they force autistic people to adapt to the social norms we know instead of really helping them. For example, as mentioned in the paragraph 4.3, this article presents eye-tracking glasses that are used to train autistic people to look people in the eyes. It also presents, a technology that tells its user if she/he is at a comfortable distance with her/his interaction partner. This article also talks about numerous other gadgets which have one thing in common : they see autism as a disability and help autistic people adapt to the social norms. However, some autistic people prefer not to see it as a disability, but as a different way of behaving. Therefore, it would be better to have technologies to help them find their own ways of communicating with their partners. 
+A lot of technologies designed to help people with ASD are criticized because they force autistic people to adapt to the social norms we know instead of really helping them. For example, as mentioned in the paragraph 4.3, this article talks about numerous gadgets which have one thing in common : they see autism as a disability and help autistic people adapt to the social norms.\cite{2017UTravelSmartMobility} However, some autistic people prefer not to see it as a disability, but as a different way of behaving. Therefore, it would be better to have technologies to help them find their own ways of communicating with their partners. 
 
 \subsection{The importance of the diagnosis}
-Another type of solution would be to improve the detection of ASD on the children. Like it has been described in the introduction, it is very important to detect this trouble the earlier that is possible. In this way we can cite the solution suggested in the paper !!!!!!!!!!! (Designing a Smart Virtual Environment for Autism Spectrum Disorder Detection), which uses new technologie like VR. The idea is to make some games that will test the children, this includes tutorial levels, in-game day levels, mental stressor mini-games, and physical exercise mini-games. 
+Another type of solution would be to improve the detection of ASD on the children. Like it has been described in the introduction, it is very important to detect this trouble the earlier that is possible. In this way we can cite a solution which uses new technologies like VR. The idea is to make some games that will test the children, this includes tutorial levels, in-game day levels, mental stressor mini-games, and physical exercise mini-games. \cite{2021DesigningSmartVirtual}
 
 This type of solution unlike the other will not directly improve the usage of transport for the person with ASD. But this can still be a great way of improvement that can be developed….. 
