Partie de Laulau/Alex (#4)
* Create 4.part4.tex

* Update 4.part4.tex

* Update __all__.tex

* Rename 4.part4.tex to 4.part.tex

* Update 4.part.tex

* Update __all__.tex

* Update __all__.tex

* Partie de Tibo (#3) (#5)

* Update Viewpoints

* Update viewsPart2.tex

* Update 2.part.tex

* Delete content/viewsPart2.tex

* Update 2.part.tex

* Update 2.part.tex

* Update 2.part.tex

* Update 2.part.tex

* Ajout du workflow latex (#1) (#2)

* Create main.yml

* Update main.yml

actions to v4



* Update bibliography.bib

* Update 2.part.tex

* Update __all__.tex

* Update 1.part.tex

* Update 0.introduction.tex

* Update 0.introduction.tex

Remove smallskip

* Update 2.part.tex

Reformat code

remove space and new line

* Update main.tex

* Update bibliography.bib

---------

Co-authored-by: ThibaultGautheron <127932771+ThibaultGautheron@users.noreply.github.com>
Co-authored-by: Jean-Yves S <jean-yves.saint-loubert@insa-toulouse.fr>

* Update __all__.tex

* Update 4.part.tex

* Update 4.part.tex

* Update 4.part.tex

---------

Co-authored-by: lauracab31 <147844898+lauracab31@users.noreply.github.com>
Co-authored-by: ThibaultGautheron <127932771+ThibaultGautheron@users.noreply.github.com>
Co-authored-by: Jean-Yves S <jean-yves.saint-loubert@insa-toulouse.fr>
Co-authored-by: Soliat81 <132774539+Soliat81@users.noreply.github.com>

--- a/imports/bibliography.bib
+++ b/imports/bibliography.bib
@@ -20,14 +20,27 @@
   urldate = {2024-01-18}
 }
 
+@inproceedings{2017BuildingSmartAccessible,
+  title = {Building {{Smart}} and {{Accessible Transportation Hubs}} with {{Internet}} of {{Things}}, {{Big Data Analytics}}, and {{Affective Computing}}},
+  booktitle = {International {{Conference}} on {{Sustainable Infrastructure}} 2017},
+  author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
+  year = {2017},
+  month = oct,
+  pages = {126--138},
+  publisher = {{American Society of Civil Engineers}},
+  address = {{New York}},
+  url = {doi.org/10.1061/9780784481219.012},
+  urldate = {2024-02-24}
+}
+
 @inproceedings{2017BuildingSmartTransportation,
-  title = {Building smart transportation hubs with internet of things to improve services to people with disabilities},
-  booktitle = {{{ASCE International Workshop}} on {{Computing}} in {{Civil Engineering}} 2017},
+  title = {Building {{Smart Transportation Hubs}} with {{Internet}} of {{Things}} to {{Improve Services}} to {{People}} with {{Disabilities}}},
+  booktitle = {Computing in {{Civil Engineering}} 2017},
   author = {Gong, Jie and Feeley, Cecilia and Tang, Hao and Olmschenk, Greg and Nair, Vishnu and Zhou, Zixiang and Yu, Yi and Yamamoto, Ken and Zhu, Zhigang},
   year = {2017},
   month = jun,
   pages = {458--466},
-  publisher = {{ASCE}},
+  publisher = {{American Society of Civil Engineers}},
   address = {{Seattle}},
   url = {doi.org/10.1061/9780784480823.055},
   urldate = {2024-01-18}
